Updated CSS and HTML to add quotes and align author of quote

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="awesome">
 			<div class="left">
 				<div>This website is awesome</div>
-				<div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+				<p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
 				<button class="awesomebutton">Sign Up</button>
 			</div>
 			<div class="right">
@@ -30,7 +30,7 @@
 			Some random information
 		</div>
 		<div class="quote">
-			This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. -Thor, God of Thunder
+			"This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice." <span>-Thor, God of Thunder</span>
 		</div>
 			<div class="action">
 			Call to action! It's time!
