--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<div class="header">
 		<p class="logo">Header Logo</p>
 		<ul>
-			<li>header link one</li>
-			<li>header link two</li>
-			<li class="push">header link three</li>
+			<li><a href="#">header link one</a></li>
+			<li><a href="#">header link two</a></li>
+			<li class="push"><a href="#">header link three</a></li>
 		</ul>
 	</div>
 	<div class="body">
@@ -26,14 +26,36 @@
 				<img src="images/placeholder.png">
 			</div>
 		</div>
-		<div class="information">
-			Some random information
+		<div class="information"><h3>Some random information</h3></div>
+		<div class="cards">
+			<div class="items">
+				<img src="images/infoplaceholder.png">
+				<p class="text">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="items">
+				<img src="images/infoplaceholder.png">
+				<p class="text">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="items">
+				<img src="images/infoplaceholder.png">
+				<p class="text">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="items">
+				<img src="images/infoplaceholder.png">
+				<p class="text">this is some subtext under an illustration or image</p>
+			</div>
 		</div>
 		<div class="quote">
 			"This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice." <span>-Thor, God of Thunder</span>
 		</div>
-			<div class="action">
-			Call to action! It's time!
+		<div class="action">
+			<div class="banner">
+				<div class="actiontext">
+					<p>Call to action! It's Time</p>
+					<p class=smalltext>Sign up for our product by clicking that button right over there!</p>
+				</div>
+				<button class="actionbutton">Sign up</button>
+			</div>
 		</div>
 	</div>
 	<div class="footer">
